# managementsim

./: .env.example  Dockerfile  README.md  main.py  planning.md  pyproject.toml  requirements.txt  run.py
config/: case_config.py  survey_questions.py  valid_user_ids.py
models/: schemas.py
prompts/: DVT_case_prompt.txt  case_creation_prompt.txt
services/: auth_service.py  google_drive_service.py  openai_service.py  session_service.py
src/: app.py  app_test.py  app_v0.py  app_v1.py  case_config.py  main.py
static/css/: style.css
static/js/: app.js
templates/: base.html  case.html  login.html  summary.html
tests/: test_env_fix.py  test_google_drive.py  test_simple.py
