[project]
name = "managementsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.169.0",
    "google-auth-oauthlib>=1.2.2",
    "litellm>=1.68.0",
    "pandas>=2.2.3",
    "pydrive2>=1.21.3",
    "streamlit>=1.45.0",
    "watchdog>=6.0.0",
]
