[project]
name = "managementsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "google-api-python-client>=2.169.0",
    "google-auth-oauthlib>=1.2.2",
    "openai>=1.30.0",
    "pandas>=2.2.3",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.0",
]
